Normalizes currencies, countries and languages in nomenclatures

--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -263,6 +263,437 @@ jpn:
         # young_animal_expenses: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       # name: "Code comptable"
+    countries:
+      items:
+        ad: "アンドラ"
+        ae: "アラブ首長国連邦"
+        af: "アフガニスタン"
+        ag: "アンティグア・バーブーダ"
+        ai: "アンギラ"
+        al: "アルバニア"
+        am: "アルメニア"
+        an: "オランダ領アンティル"
+        ao: "アンゴラ"
+        aq: "南極"
+        ar: "アルゼンチン"
+        as: "アメリカ領サモア"
+        at: "オーストリア"
+        au: "オーストラリア"
+        aw: "アルバ"
+        ax: "オーランド諸島"
+        az: "アゼルバイジャン"
+        ba: "ボスニア・ヘルツェゴビナ"
+        bb: "バルバドス"
+        bd: "バングラデシュ"
+        be: "ベルギー"
+        bf: "ブルキナファソ"
+        bg: "ブルガリア"
+        bh: "バーレーン"
+        bi: "ブルンジ"
+        bj: "ベナン"
+        bl: "サン・バルテルミー島"
+        bm: "バミューダ諸島"
+        bn: "ブルネイ"
+        bo: "ボリビア"
+        br: "ブラジル"
+        bs: "バハマ"
+        bt: "ブータン"
+        bv: "ブーベ島"
+        bw: "ボツワナ"
+        by: "ベラルーシ"
+        bz: "ベリーズ"
+        ca: "カナダ"
+        cc: "ココス諸島"
+        cd: "コンゴ民主共和国"
+        cf: "中央アフリカ"
+        cg: "コンゴ共和国"
+        ch: "スイス"
+        ci: "コートジボワール"
+        ck: "クック諸島"
+        cl: "チリ"
+        cm: "カメルーン"
+        cn: "中華人民共和国"
+        co: "コロンビア"
+        cr: "コスタリカ"
+        cu: "キューバ"
+        cv: "カーボベルデ"
+        cx: "クリスマス島"
+        cy: "キプロス"
+        cz: "チェコ"
+        de: "ドイツ"
+        dj: "ジブチ"
+        dk: "デンマーク"
+        dm: "ドミニカ国"
+        do: "ドミニカ共和国"
+        dz: "アルジェリア"
+        ec: "エクアドル"
+        ee: "エストニア"
+        eg: "エジプト"
+        eh: "西サハラ"
+        er: "エリトリア"
+        es: "スペイン"
+        et: "エチオピア"
+        fi: "フィンランド"
+        fj: "フィジー"
+        fk: "フォークランド諸島"
+        fm: "ミクロネシア連邦"
+        fo: "フェロー諸島"
+        fr: "フランス"
+        ga: "ガボン"
+        gb: "イギリス"
+        gd: "グレナダ"
+        ge: "グルジア"
+        gf: "フランス領ギアナ"
+        gg: "ガーンジー島"
+        gh: "ガーナ"
+        gi: "ジブラルタル"
+        gl: "グリーンランド"
+        gm: "ガンビア"
+        gn: "ギニア"
+        gp: "グアドループ島"
+        gq: "赤道ギニア"
+        gr: "ギリシャ"
+        gs: "南ジョージア島・南サンドイッチ諸島"
+        gt: "グアテマラ"
+        gu: "グアム"
+        gw: "ギニアビサウ"
+        gy: "ガイアナ"
+        hk: "香港"
+        hm: "ヘアド島・マクドナルド諸島"
+        hn: "ホンジュラス"
+        hr: "クロアチア"
+        ht: "ハイチ"
+        hu: "ハンガリー"
+        id: "インドネシア"
+        ie: "アイルランド"
+        il: "イスラエル"
+        im: "マン島"
+        in: "インド"
+        io: "イギリス領インド洋地域"
+        iq: "イラク"
+        ir: "イラン"
+        is: "アイスランド"
+        it: "イタリア"
+        je: "ジャージー島"
+        jm: "ジャマイカ"
+        jo: "ヨルダン"
+        jp: "日本"
+        ke: "ケニア"
+        kg: "キルギス"
+        kh: "カンボジア"
+        ki: "キリバス"
+        km: "コモロ"
+        kn: "セントクリストファー・ネイビス"
+        kp: "朝鮮民主主義人民共和国"
+        kr: "大韓民国"
+        kw: "クウェート"
+        ky: "ケイマン諸島"
+        kz: "カザフスタン"
+        la: "ラオス"
+        lb: "レバノン"
+        lc: "セントルシア"
+        li: "リヒテンシュタイン"
+        lk: "スリランカ"
+        lr: "リベリア"
+        ls: "レソト"
+        lt: "リトアニア"
+        lu: "ルクセンブルク"
+        lv: "ラトビア"
+        ly: "リビア"
+        ma: "モロッコ"
+        mc: "モナコ"
+        md: "モルドバ"
+        me: "モンテネグロ"
+        mf: "サン・マルタン島"
+        mg: "マダガスカル"
+        mh: "マーシャル諸島"
+        mk: "マケドニア共和国"
+        ml: "マリ"
+        mm: "ミャンマー"
+        mn: "モンゴル"
+        mo: "マカオ"
+        mp: "北マリアナ諸島"
+        mq: "マルチニーク島"
+        mr: "モーリタニア"
+        ms: "モントセラト"
+        mt: "マルタ"
+        mu: "モーリシャス"
+        mv: "モルディブ"
+        mw: "マラウイ"
+        mx: "メキシコ"
+        my: "マレーシア"
+        mz: "モザンビーク"
+        na: "ナミビア"
+        nc: "ニューカレドニア"
+        ne: "ニジェール"
+        nf: "ノーフォーク島"
+        ng: "ナイジェリア"
+        ni: "ニカラグア"
+        nl: "オランダ"
+        no: "ノルウェー"
+        np: "ネパール"
+        nr: "ナウル"
+        nu: "ニウエ"
+        nz: "ニュージーランド"
+        om: "オマーン"
+        pa: "パナマ"
+        pe: "ペルー"
+        pf: "フランス領ポリネシア"
+        pg: "パプアニューギニア"
+        ph: "フィリピン"
+        pk: "パキスタン"
+        pl: "ポーランド"
+        pm: "サンピエール島・ミクロン島"
+        pn: "ピトケアン"
+        pr: "プエルトリコ"
+        ps: "パレスチナ"
+        pt: "ポルトガル"
+        pw: "パラオ"
+        py: "パラグアイ"
+        qa: "カタール"
+        re: "レユニオン"
+        ro: "ルーマニア"
+        rs: "セルビア"
+        ru: "ロシア"
+        rw: "ルワンダ"
+        sa: "サウジアラビア"
+        sb: "ソロモン諸島"
+        sc: "セーシェル"
+        sd: "スーダン"
+        se: "スウェーデン"
+        sg: "シンガポール"
+        sh: "セントヘレナ島"
+        si: "スロベニア"
+        sj: "スバールバル諸島・ヤンマイエン島"
+        sk: "スロバキア"
+        sl: "シエラレオネ"
+        sm: "サンマリノ"
+        sn: "セネガル"
+        so: "ソマリア"
+        sr: "スリナム"
+        # ss: "Soudan du Sud"
+        st: "サントメ・プリンシペ"
+        sv: "エルサルバドル"
+        sy: "シリア"
+        sz: "スワジランド"
+        tc: "タークス・カイコス諸島"
+        td: "チャド"
+        tf: "フランス領南方・南極地域"
+        tg: "トーゴ"
+        th: "タイ"
+        tj: "タジキスタン"
+        tk: "トケラウ諸島"
+        tl: "東ティモール"
+        tm: "トルクメニスタン"
+        tn: "チュニジア"
+        to: "トンガ"
+        tr: "トルコ"
+        tt: "トリニダード・トバゴ"
+        tv: "ツバル"
+        tw: "台湾（台湾省/中華民国）"
+        tz: "タンザニア"
+        ua: "ウクライナ"
+        ug: "ウガンダ"
+        um: "アメリカ領太平洋諸島"
+        us: "アメリカ合衆国"
+        uy: "ウルグアイ"
+        uz: "ウズベキスタン"
+        va: "バチカン市国"
+        vc: "セントビンセントおよびグレナディーン諸島"
+        ve: "ベネズエラ"
+        vg: "イギリス領ヴァージン諸島"
+        vi: "アメリカ領ヴァージン諸島"
+        vn: "ベトナム"
+        vu: "バヌアツ"
+        wf: "ウォリス・フツナ"
+        ws: "サモア"
+        ye: "イエメン"
+        yt: "マヨット島"
+        za: "南アフリカ"
+        zm: "ザンビア"
+        zw: "ジンバブエ"
+    currencies:
+      items:
+        AED: "UAE ディルハム"
+        AFN: "アフガニ"
+        ALL: "レク"
+        AMD: "ドラム"
+        ANG: "アンティル・ギルダー"
+        AOA: "クワンザ"
+        ARS: "アルゼンチン・ペソ"
+        AUD: "オーストラリア・ドル"
+        AWG: "アルバ・フロリン"
+        AZN: "アゼルバイジャン・マナト"
+        BAM: "兌換マルク"
+        BBD: "バルバドス・ドル"
+        BDT: "タカ"
+        BGN: "レフ"
+        BHD: "バーレーン・ディナール"
+        BIF: "ブルンジ・フラン"
+        BMD: "バミューダ・ドル"
+        BND: "ブルネイ・ドル"
+        BOB: "ボリビアーノ"
+        # BOV: "Mvdol"
+        BRL: "レアル"
+        BSD: "バハマ・ドル"
+        BTN: "ニュルタム"
+        BWP: "プラ"
+        BYR: "ベラルーシ・ルーブル"
+        BZD: "ベリーズ・ドル"
+        CAD: "カナダ・ドル"
+        CDF: "コンゴ・フラン"
+        # CHE: "Euro WIR"
+        CHF: "スイス・フラン"
+        # CHW: "Franc WIR"
+        # CLF: "Unidad de formento"
+        CLP: "チリ・ペソ"
+        CNY: "人民元"
+        COP: "コロンビア・ペソ"
+        # COU: "Unidad de valor real"
+        CRC: "コスタリカ・コロン"
+        CSD: "セルビア・ディナール" #?
+        CUC: "兌換ペソ"
+        CUP: "キューバ・ペソ"
+        CVE: "カーボベルデ・エスクード"
+        CZK: "チェコ・コルナ"
+        DJF: "ジブチ・フラン"
+        DKK: "デンマーク・クローネ"
+        DOP: "ドミニカ・ペソ"
+        DZD: "アルジェリア・ディナール"
+        EEK: "クローン" #?
+        EGP: "エジプト・ポンド"
+        ERN: "ナクファ"
+        ETB: "ブル"
+        EUR: "ユーロ"
+        FJD: "フィジー・ドル"
+        FKP: "フォークランド諸島・ポンド"
+        FRF: "フランス・フラン"
+        GBP: "UK ポンド"
+        GEL: "ラリ"
+        GGP: "ガーンジー・ポンド" #?
+        GHC: "セディ" #?
+        # GHS: "Cedi"
+        GIP: "ジブラルタル・ポンド"
+        GMD: "ダラシ"
+        GNF: "ギニア・フラン"
+        GTQ: "ケツァル"
+        GWP: "ギニアビサウ・ペソ" #?
+        GYD: "ガイアナ・ドル"
+        HKD: "香港ドル"
+        HNL: "レンピラ"
+        HRK: "クーナ"
+        HTG: "グールド"
+        HUF: "フォリント"
+        IDR: "ルピア"
+        ILS: "新シェケル"
+        INR: "インド・ルピー"
+        IQD: "イラク・ディナール"
+        IRR: "イラン・リアル"
+        ISK: "アイスランド・クローナ"
+        JMD: "ジャマイカ・ドル"
+        JOD: "ヨルダン・ディナール"
+        JPY: "円"
+        KES: "ケニア・シリング"
+        KGS: "キルギス・ソム"
+        KHR: "リエル"
+        KMF: "コモロ・フラン"
+        KPW: "ウォン"
+        KRW: "ウォン"
+        KWD: "クウェート・ディナール"
+        KYD: "ケイマン諸島ドル"
+        KZT: "テンゲ"
+        LAK: "キープ"
+        LBP: "レバノン・ポンド"
+        LKR: "スリランカ・ルピー"
+        LRD: "リベリア・ドル"
+        LSL: "ロチ"
+        LTL: "リタス"
+        LVL: "ラッツ"
+        LYD: "リビア・ディナール"
+        MAD: "モロッコ・ディルハム"
+        MDL: "モルドバ・レウ"
+        MGA: "アリアリ"
+        MGF: "マダガスカル・フラン" #?
+        MKD: "マケドニア・ディナール"
+        MMK: "チャット"
+        MNT: "トゥグルグ"
+        MOP: "パタカ"
+        MRO: "ウギア"
+        MUR: "モーリシャス・ルピー"
+        MVR: "ルフィヤ"
+        MWK: "マラウイ・クワチャ"
+        MXN: "メキシコ・ペソ"
+        # MXV: "Unidad de inversión"
+        MYR: "リンギット"
+        MZN: "メティカル"
+        NAD: "ナミビア・ドル"
+        NGN: "ナイラ"
+        NIO: "コルドバ・オロ"
+        NOK: "ノルウェー・クローネ"
+        NPR: "ネパール・ルピー"
+        NZD: "ニュージーランド・ドル"
+        OMR: "オマーン・リヤル"
+        PAB: "バルボア"
+        PEN: "ヌエボ・ソル"
+        PGK: "キナ"
+        PHP: "フィリピン・ペソ"
+        PKR: "パキスタン・ルピー"
+        PLN: "ズウォティ"
+        PYG: "グアラニー"
+        QAR: "カタール・リヤル"
+        ROL: "旧ルーマニア・レウ" #?
+        RON: "新ルーマニア・レウ"
+        # RSD: "Dinar serbe"
+        RUB: "ロシア・ルーブル"
+        RWF: "ルワンダ・フラン"
+        SAR: "サウディ・リヤル"
+        SBD: "ソロモン諸島ドル"
+        SCR: "セーシェル・ルピー"
+        SDG: "スーダン・ポンド"
+        SEK: "スウェーデン・クローナ"
+        SGD: "シンガポール・ドル"
+        SHP: "セントヘレナ・ポンド"
+        SLL: "レオン"
+        SOS: "ソマリア・シリング"
+        SRD: "スリナム・ドル"
+        SSP: "南スーダン・ポンド"
+        STD: "ドブラ"
+        SVC: "サルバドール・コロン"
+        SYP: "シリア・ポンド"
+        SZL: "リランゲニ"
+        THB: "バーツ"
+        TJS: "ソモニ"
+        TMT: "トルクメニスタン・マナト"
+        TND: "チュニジア・ディナール"
+        TOP: "パ・アンガ"
+        TPE: "ポルトガル領ティモール・エスクード" #?
+        TRL: "トルコリラ" #?
+        TRY: "新トルコリラ"
+        TTD: "トリニダード・トバゴ・ドル"
+        TWD: "ニュー台湾ドル"
+        TZS: "タンザニア・シリング"
+        UAH: "フリヴニャ"
+        UGX: "ウガンダ・シリング"
+        USD: "アメリカ合衆国ドル"
+        # USN: "Dollar américain"
+        # USS: "Dollar américain"
+        # UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+        UYU: "ウルグアイ・ペソ"
+        UZS: "ウズベキスタン・スム"
+        VEB: "ボリバル" #?
+        # VEF: "Bolívar vénézuélien"
+        VND: "ドン"
+        VUV: "バツ"
+        WST: "サモア・タラ"
+        # XAF: "Franc CFA BEAC"
+        # XCD: "Dollar de la Caraïbe orientale"
+        # XOF: "Franc CFA BCEAO"
+        # XPF: "Franc CFP"
+        YER: "イエメン・リアル"
+        ZAR: "ランド"
+        ZMK: "ザンビア・クワチャ"
+        ZWD: "ジンバブエ・ドル" #?
+        # ZWL: "Dollar zimbabwéen"
     document_categories:
       items:
         # health: "Santé - Hygiène"
@@ -352,6 +783,112 @@ jpn:
         # urea_concentration: "Teneur moyenne en urée"
         # usage_duration: "Durée d'utilisation"
       # name: "Indicateurs"
+    languages:
+      items:
+        afr: "アフリカーンス語"
+        amh: "アムハラ語"
+        arb: "アラビア語"
+        aym: "アイマラ語"
+        aze: "アゼルバイジャン語"
+        bel: "ベラルーシ語"
+        ben: "ベンガル語"
+        bis: "ビスラマ語"
+        bul: "ブルガリア語"
+        cat: "カタルーニャ語"
+        ces: "チェコ語"
+        cmn: "北方方言"
+        crs: "セーシェル・クレオール語"
+        dan: "デンマーク語"
+        deu: "ドイツ語"
+        div: "ディベヒ語"
+        dzo: "ゾンカ語"
+        ell: "ギリシア語"
+        eng: "英語"
+        est: "エストニア語"
+        fas: "ペルシア語"
+        fij: "フィジー語"
+        fil: "フィリピン語"
+        fin: "フィンランド語（スオミ語）"
+        fra: "フランス語"
+        gil: "キリバス語"
+        gle: "アイルランド語（アイルランド・ゲール語）"
+        grn: "グアラニー語"
+        hat: "ハイチ・クレオール語"
+        heb: "ヘブライ語"
+        hin: "ヒンディー語"
+        hmo: "ヒリモツ語"
+        hrv: "クロアチア語"
+        hun: "ハンガリー語"
+        hye: "アルメニア語"
+        iba: "イバン語"
+        ind: "インドネシア語"
+        isl: "アイスランド語"
+        ita: "イタリア語"
+        jpn: "日本語"
+        kat: "グルジア語"
+        kaz: "カザフ語"
+        khm: "クメール語"
+        kir: "キルギス語"
+        kor: "朝鮮語"
+        lao: "ラーオ語"
+        lat: "ラテン語"
+        lav: "ラトビア語（ラトヴィア語）"
+        lit: "リトアニア語"
+        ltz: "ルクセンブルク語"
+        mah: "マーシャル語"
+        mkd: "マケドニア語"
+        mlg: "マダガスカル語"
+        mlt: "マルタ語"
+        mon: "モンゴル語（蒙古語）"
+        mri: "マオリ語"
+        msa: "マレー語"
+        mya: "ビルマ語"
+        nau: "ナウル語"
+        nde: "北ンデベレ語"
+        nep: "ネパール語"
+        nld: "オランダ語"
+        nor: "ノルウェー語"
+        nya: "チェワ語（チチェワ）"
+        nzs: "ニュージーランドの手話"
+        pau: "パラオ語"
+        pol: "ポーランド語"
+        por: "ポルトガル語"
+        pov: "ギニアビサウ・クレオール語"
+        pus: "パシュトー語"
+        que: "ケチュア語"
+        rar: "ラロトンガ語"
+        ron: "ルーマニア語"
+        run: "ルンディ語"
+        rus: "ロシア語"
+        sag: "サンゴ語"
+        sin: "シンハラ語（シンハリ語）"
+        slk: "スロバキア語"
+        slv: "スロベニア語"
+        smo: "サモア語"
+        sna: "ショナ語"
+        som: "ソマリ語"
+        sot: "ソト語"
+        spa: "スペイン語"
+        sqi: "アルバニア語"
+        srp: "セルビア語"
+        swa: "スワヒリ語"
+        swb: "コモロ語"
+        swe: "スウェーデン語"
+        tam: "タミル語"
+        tet: "テトゥン語"
+        tgk: "タジク語"
+        tha: "タイ語"
+        tir: "ティグリニャ語"
+        ton: "トンガ語"
+        tpi: "トク・ピシン"
+        tuk: "トルクメン語（トゥルクメン語）"
+        tur: "トルコ語"
+        tvl: "ツバル語（トゥヴァル語）"
+        tzm: "ベルベル語"
+        ukr: "ウクライナ語"
+        urd: "ウルドゥー語"
+        uzb: "ウズベク語"
+        vie: "ベトナム語（ヴェトナム語）"
     procedure_natures:
       items:
         # animal_cares: "Soin animaliers"
