--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -282,6 +282,426 @@ eng:
         young_animal_product: "Young animal product" #?
         # young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       name: "Name"
+    countries:
+      items:
+        ad: "Andorra"
+        ae: "United Arab Emirates"
+        af: "Afghanistan"
+        ag: "Antigua and Barbuda"
+        ai: "Anguilla"
+        al: "Albania"
+        am: "Armenia"
+        an: "Netherlands Antilles"
+        ao: "Angola"
+        aq: "Antarctica"
+        ar: "Argentina"
+        as: "American Samoa"
+        at: "Austria"
+        au: "Australia"
+        aw: "Aruba"
+        ax: "Åland Islands"
+        az: "Azerbaijan"
+        ba: "Bosnia and Herzegovina"
+        bb: "Barbados"
+        bd: "Bangladesh"
+        be: "Belgium"
+        bf: "Burkina Faso"
+        bg: "Bulgaria"
+        bh: "Bahrain"
+        bi: "Burundi"
+        bj: "Benin"
+        bl: "Saint Barthélemy"
+        bm: "Bermuda"
+        bn: "Brunei Darussalam"
+        bo: "Bolivia, Plurinational State of"
+        br: "Brazil"
+        bs: "Bahamas"
+        bt: "Bhutan"
+        bv: "Bouvet Island"
+        bw: "Botswana"
+        by: "Belarus"
+        bz: "Belize"
+        ca: "Canada"
+        cc: "Cocos (Keeling) Islands"
+        cd: "Congo, the Democratic Republic of the"
+        cf: "Central African Republic"
+        cg: "Congo"
+        ch: "Switzerland"
+        ci: "Côte d'Ivoire"
+        ck: "Cook Islands"
+        cl: "Chile"
+        cm: "Cameroon"
+        cn: "China"
+        co: "Colombia"
+        cr: "Costa Rica"
+        cu: "Cuba"
+        cv: "Cape Verde"
+        cx: "Christmas Island"
+        cy: "Cyprus"
+        cz: "Czech Republic"
+        de: "Germany"
+        dj: "Djibouti"
+        dk: "Denmark"
+        dm: "Dominica"
+        do: "Dominican Republic"
+        dz: "Algeria"
+        ec: "Ecuador"
+        ee: "Estonia"
+        eg: "Egypt"
+        eh: "Western Sahara"
+        er: "Eritrea"
+        es: "Spain"
+        et: "Ethiopia"
+        fi: "Finland"
+        fj: "Fiji"
+        fk: "Falkland Islands (Malvinas)"
+        fm: "Micronesia, Federated States of"
+        fo: "Faroe Islands"
+        fr: "France"
+        ga: "Gabon"
+        gb: "United Kingdom"
+        gd: "Grenada"
+        ge: "Georgia"
+        gf: "French Guiana"
+        gg: "Guernsey"
+        gh: "Ghana"
+        gi: "Gibraltar"
+        gl: "Greenland"
+        gm: "Gambia"
+        gn: "Guinea"
+        gp: "Guadeloupe"
+        gq: "Equatorial Guinea"
+        gr: "Greece"
+        gs: "South Georgia and the South Sandwich Islands"
+        gt: "Guatemala"
+        gu: "Guam"
+        gw: "Guinea-Bissau"
+        gy: "Guyana"
+        hk: "Hong Kong"
+        hm: "Heard Island and McDonald Islands"
+        hn: "Honduras"
+        hr: "Croatia"
+        ht: "Haiti"
+        hu: "Hungary"
+        id: "Indonesia"
+        ie: "Ireland"
+        il: "Israel"
+        im: "Isle of Man"
+        in: "India"
+        io: "British Indian Ocean Territory"
+        iq: "Iraq"
+        ir: "Iran, Islamic Republic of"
+        is: "Iceland"
+        it: "Italy"
+        je: "Jersey"
+        jm: "Jamaica"
+        jo: "Jordan"
+        jp: "Japan"
+        ke: "Kenya"
+        kg: "Kyrgyzstan"
+        kh: "Cambodia"
+        ki: "Kiribati"
+        km: "Comoros"
+        kn: "Saint Kitts and Nevis"
+        kp: "Korea, Democratic People's Republic of"
+        kr: "Korea, Republic of"
+        kw: "Kuwait"
+        ky: "Cayman Islands"
+        kz: "Kazakhstan"
+        la: "Lao People's Democratic Republic"
+        lb: "Lebanon"
+        lc: "Saint Lucia"
+        li: "Liechtenstein"
+        lk: "Sri Lanka"
+        lr: "Liberia"
+        ls: "Lesotho"
+        lt: "Lithuania"
+        lu: "Luxembourg"
+        lv: "Latvia"
+        ly: "Libyan Arab Jamahiriya"
+        ma: "Morocco"
+        mc: "Monaco"
+        md: "Moldova, Republic of"
+        me: "Montenegro"
+        mf: "Saint Martin (French part)"
+        mg: "Madagascar"
+        mh: "Marshall Islands"
+        mk: "Macedonia, the former Yugoslav Republic of"
+        ml: "Mali"
+        mm: "Myanmar"
+        mn: "Mongolia"
+        mo: "Macao"
+        mp: "Northern Mariana Islands"
+        mq: "Martinique"
+        mr: "Mauritania"
+        ms: "Montserrat"
+        mt: "Malta"
+        mu: "Mauritius"
+        mv: "Maldives"
+        mw: "Malawi"
+        mx: "Mexico"
+        my: "Malaysia"
+        mz: "Mozambique"
+        na: "Namibia"
+        nc: "New Caledonia"
+        ne: "Niger"
+        nf: "Norfolk Island"
+        ng: "Nigeria"
+        ni: "Nicaragua"
+        nl: "Netherlands"
+        no: "Norway"
+        np: "Nepal"
+        nr: "Nauru"
+        nu: "Niue"
+        nz: "New Zealand"
+        om: "Oman"
+        pa: "Panama"
+        pe: "Peru"
+        pf: "French Polynesia"
+        pg: "Papua New Guinea"
+        ph: "Philippines"
+        pk: "Pakistan"
+        pl: "Poland"
+        pm: "Saint Pierre and Miquelon"
+        pn: "Pitcairn"
+        pr: "Puerto Rico"
+        ps: "Palestinian Territory, Occupied"
+        pt: "Portugal"
+        pw: "Palau"
+        py: "Paraguay"
+        qa: "Qatar"
+        re: "Réunion"
+        ro: "Romania"
+        rs: "Serbia"
+        ru: "Russian Federation"
+        rw: "Rwanda"
+        sa: "Saudi Arabia"
+        sb: "Solomon Islands"
+        sc: "Seychelles"
+        sd: "Sudan"
+        se: "Sweden"
+        sg: "Singapore"
+        sh: "Saint Helena, Ascension and Tristan da Cunha"
+        si: "Slovenia"
+        sj: "Svalbard and Jan Mayen"
+        sk: "Slovakia"
+        sl: "Sierra Leone"
+        sm: "San Marino"
+        sn: "Senegal"
+        so: "Somalia"
+        sr: "Suriname"
+        ss: "South Sudan"
+        st: "Sao Tome and Principe"
+        sv: "El Salvador"
+        sy: "Syrian Arab Republic"
+        sz: "Swaziland"
+        tc: "Turks and Caicos Islands"
+        td: "Chad"
+        tf: "French Southern Territories"
+        tg: "Togo"
+        th: "Thailand"
+        tj: "Tajikistan"
+        tk: "Tokelau"
+        tl: "Timor-Leste"
+        tm: "Turkmenistan"
+        tn: "Tunisia"
+        to: "Tonga"
+        tr: "Turkey"
+        tt: "Trinidad and Tobago"
+        tv: "Tuvalu"
+        tw: "Taiwan, Province of China"
+        tz: "Tanzania, United Republic of"
+        ua: "Ukraine"
+        ug: "Uganda"
+        um: "United States Minor Outlying Islands"
+        us: "United States"
+        uy: "Uruguay"
+        uz: "Uzbekistan"
+        va: "Holy See (Vatican City State)"
+        vc: "Saint Vincent and the Grenadines"
+        ve: "Venezuela, Bolivarian Republic of"
+        vg: "Virgin Islands, British"
+        vi: "Virgin Islands, U.S."
+        vn: "Viet Nam"
+        vu: "Vanuatu"
+        wf: "Wallis and Futuna"
+        ws: "Samoa"
+        ye: "Yemen"
+        yt: "Mayotte"
+        za: "South Africa"
+        zm: "Zambia"
+        zw: "Zimbabwe"
+    currencies:
+      items:
+        AED: "UAE Dirham"
+        AFN: "Afghani"
+        ALL: "Lek"
+        AMD: "Armenian Dram"
+        ANG: "Netherlands Antillean Guilder"
+        AOA: "Kwanza"
+        ARS: "Argentine Peso"
+        AUD: "Australian Dollar"
+        AWG: "Aruban Florin"
+        AZN: "Azerbaijanian Manat"
+        BAM: "Convertible Mark"
+        BBD: "Barbados Dollar"
+        BDT: "Taka"
+        BGN: "Bulgarian Lev"
+        BHD: "Bahraini Dinar"
+        BIF: "Burundi Franc"
+        BMD: "Bermudian Dollar"
+        BND: "Brunei Dollar"
+        BOB: "Boliviano"
+        BOV: "Mvdol"
+        BRL: "Brazilian Real"
+        BSD: "Bahamian Dollar"
+        BTN: "Ngultrum"
+        BWP: "Pula"
+        BYR: "Belarussian Ruble"
+        BZD: "Belize Dollar"
+        CAD: "Canadian Dollar"
+        CDF: "Congolese Franc"
+        CHE: "WIR Euro"
+        CHF: "Swiss Franc"
+        CHW: "WIR Franc"
+        CLF: "Unidades de fomento"
+        CLP: "Chilean Peso"
+        CNY: "Yuan Renminbi"
+        COP: "Colombian Peso"
+        COU: "Unidad de Valor Real"
+        CRC: "Costa Rican Colon"
+        CUC: "Peso Convertible"
+        CUP: "Cuban Peso"
+        CVE: "Cape Verde Escudo"
+        CZK: "Czech Koruna"
+        DJF: "Djibouti Franc"
+        DKK: "Danish Krone"
+        DOP: "Dominican Peso"
+        DZD: "Algerian Dinar"
+        EGP: "Egyptian Pound"
+        ERN: "Nakfa"
+        ETB: "Ethiopian Birr"
+        EUR: "Euro"
+        FJD: "Fiji Dollar"
+        FKP: "Falkland Islands Pound"
+        FRF: "French franc"
+        GBP: "Pound Sterling"
+        GEL: "Lari"
+        GHS: "Ghana Cedi"
+        GIP: "Gibraltar Pound"
+        GMD: "Dalasi"
+        GNF: "Guinea Franc"
+        GTQ: "Quetzal"
+        GYD: "Guyana Dollar"
+        HKD: "Hong Kong Dollar"
+        HNL: "Lempira"
+        HRK: "Croatian Kuna"
+        HTG: "Gourde"
+        HUF: "Forint"
+        IDR: "Rupiah"
+        ILS: "New Israeli Sheqel"
+        INR: "Indian Rupee"
+        IQD: "Iraqi Dinar"
+        IRR: "Iranian Rial"
+        ISK: "Iceland Krona"
+        JMD: "Jamaican Dollar"
+        JOD: "Jordanian Dinar"
+        JPY: "Yen"
+        KES: "Kenyan Shilling"
+        KGS: "Som"
+        KHR: "Riel"
+        KMF: "Comoro Franc"
+        KPW: "North Korean Won"
+        KRW: "Won"
+        KWD: "Kuwaiti Dinar"
+        KYD: "Cayman Islands Dollar"
+        KZT: "Tenge"
+        LAK: "Kip"
+        LBP: "Lebanese Pound"
+        LKR: "Sri Lanka Rupee"
+        LRD: "Liberian Dollar"
+        LSL: "Loti"
+        LTL: "Lithuanian Litas"
+        LVL: "Latvian Lats"
+        LYD: "Libyan Dinar"
+        MAD: "Moroccan Dirham"
+        MDL: "Moldovan Leu"
+        MGA: "Malagasy Ariary"
+        MKD: "Denar"
+        MMK: "Kyat"
+        MNT: "Tugrik"
+        MOP: "Pataca"
+        MRO: "Ouguiya"
+        MUR: "Mauritius Rupee"
+        MVR: "Rufiyaa"
+        MWK: "Kwacha"
+        MXN: "Mexican Peso"
+        MXV: "Mexican Unidad de Inversion (UDI)"
+        MYR: "Malaysian Ringgit"
+        MZN: "Mozambique Metical"
+        NAD: "Namibia Dollar"
+        NGN: "Naira"
+        NIO: "Cordoba Oro"
+        NOK: "Norwegian Krone"
+        NPR: "Nepalese Rupee"
+        NZD: "New Zealand Dollar"
+        OMR: "Rial Omani"
+        PAB: "Balboa"
+        PEN: "Nuevo Sol"
+        PGK: "Kina"
+        PHP: "Philippine Peso"
+        PKR: "Pakistan Rupee"
+        PLN: "Zloty"
+        PYG: "Guarani"
+        QAR: "Qatari Rial"
+        RON: "New Romanian Leu"
+        RSD: "Serbian Dinar"
+        RUB: "Russian Ruble"
+        RWF: "Rwanda Franc"
+        SAR: "Saudi Riyal"
+        SBD: "Solomon Islands Dollar"
+        SCR: "Seychelles Rupee"
+        SDG: "Sudanese Pound"
+        SEK: "Swedish Krona"
+        SGD: "Singapore Dollar"
+        SHP: "Saint Helena Pound"
+        SLL: "Leone"
+        SOS: "Somali Shilling"
+        SRD: "Surinam Dollar"
+        SSP: "South Sudanese Pound"
+        STD: "Dobra"
+        SVC: "El Salvador Colon"
+        SYP: "Syrian Pound"
+        SZL: "Lilangeni"
+        THB: "Baht"
+        TJS: "Somoni"
+        TMT: "Turkmenistan New Manat"
+        TND: "Tunisian Dinar"
+        TOP: "Pa’anga"
+        TRY: "Turkish Lira"
+        TTD: "Trinidad and Tobago Dollar"
+        TWD: "New Taiwan Dollar"
+        TZS: "Tanzanian Shilling"
+        UAH: "Hryvnia"
+        UGX: "Uganda Shilling"
+        USD: "United States dollar"
+        USN: "US Dollar (Next day)"
+        USS: "US Dollar (Same day)"
+        UYI: "Uruguay Peso en Unidades Indexadas (URUIURUI)"
+        UYU: "Peso Uruguayo"
+        UZS: "Uzbekistan Sum"
+        VEF: "Bolivar Fuerte"
+        VND: "Dong"
+        VUV: "Vatu"
+        WST: "Tala"
+        XAF: "CFA Franc BEAC"
+        XCD: "East Carribean Dollar"
+        XOF: "CFA Franc BCEAO"
+        XPF: "CFP Franc"
+        YER: "Yemeni Rial"
+        ZAR: "Rand"
+        ZMK: "Zambian Kwacha"
+        ZWL: "Zimbabwe Dollar"
     document_categories:
       items:
         # health: "Santé - Hygiène"
@@ -371,6 +791,112 @@ eng:
         urea_concentration: "Urea concentration"
         # usage_duration: "Durée d'utilisation"
       name: "Name"
+    languages:
+      items:
+        afr: "Afrikaans"
+        amh: "Amharic"
+        arb: "Arabic (standard)"
+        aym: "Aymara"
+        aze: "Azerbaijani"
+        bel: "Belarusian"
+        ben: "Bengali"
+        bis: "Bislama"
+        bul: "Bulgarian"
+        cat: "Catalan"
+        ces: "Czech"
+        cmn: "Mandarin Chinese"
+        crs: "Seselwa Creole French"
+        dan: "Danish"
+        deu: "German"
+        div: "Divehi"
+        dzo: "Dzongkha"
+        ell: "Greek"
+        eng: "English"
+        est: "Estonian"
+        fas: "Persian"
+        fij: "Fijian"
+        fil: "Filipino"
+        fin: "Finnish"
+        fra: "French"
+        gil: "Gilbertese"
+        gle: "Irish"
+        grn: "Guarani"
+        hat: "Haitian; Haitian Creole"
+        heb: "Hebrew"
+        hin: "Hindi"
+        hmo: "Hiri Motu"
+        hrv: "Croatian"
+        hun: "Hungarian"
+        hye: "Armenian"
+        iba: "Iban"
+        ind: "Indonesian"
+        isl: "Icelandic"
+        ita: "Italian"
+        jpn: "Japanese"
+        kat: "Georgian"
+        kaz: "Kazakh"
+        khm: "Khmer"
+        kir: "Kyrgyz"
+        kor: "Korean"
+        lao: "Lao"
+        lat: "Latin"
+        lav: "Latvian"
+        lit: "Lithuanian"
+        ltz: "Luxembourgish; Letzeburgesch"
+        mah: "Marshall"
+        mkd: "Macedonian"
+        mlg: "Malagasy"
+        mlt: "Maltese"
+        mon: "Mongolian"
+        mri: "Maori"
+        msa: "Malay (generic)"
+        mya: "Burmese"
+        nau: "Nauru"
+        nde: "Ndebele, North"
+        nep: "Nepali"
+        nld: "Dutch"
+        nor: "Norwegian"
+        nya: "Chichewa; Nyanja"
+        nzs: "New Zealand Sign Language"
+        pau: "Palauan"
+        pol: "Polish"
+        por: "Portuguese"
+        pov: "Crioulo, Upper Guinea"
+        pus: "Pushto"
+        que: "Quechua"
+        rar: "Rarotongan"
+        ron: "Romanian"
+        run: "Rundi"
+        rus: "Russian"
+        sag: "Sango"
+        sin: "Sinhala; Sinhalese"
+        slk: "Slovak"
+        slv: "Slovenian"
+        smo: "Samoan"
+        sna: "Shona"
+        som: "Somali"
+        sot: "Sotho, Southern"
+        spa: "Spanish (Castilian)"
+        sqi: "Albanian"
+        srp: "Serbian"
+        swa: "Swahili (generic)"
+        swb: "Comorian"
+        swe: "Swedish"
+        tam: "Tamil"
+        tet: "Tetum"
+        tgk: "Tajik"
+        tha: "Thai"
+        tir: "Tigrinya"
+        ton: "Tonga (Tonga Islands)"
+        tpi: "Tok Pisin"
+        tuk: "Turkmen"
+        tur: "Turkish"
+        tvl: "Tuvalu"
+        tzm: "Tamazight, Central Atlas"
+        ukr: "Ukrainian"
+        urd: "Urdu"
+        uzb: "Uzbek"
+        vie: "Vietnamese"
     procedure_natures:
       items:
         animal_cares: "Animal cares"
