--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -263,6 +263,426 @@ fra:
         young_animal_expenses: "Animaux reproducteurs (jeunes de renouvellement)"
         young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       name: "Code comptable"
+    countries:
+      items:
+        ad: "Andorre"
+        ae: "Émirats Arabes Unis"
+        af: "Afghanistan"
+        ag: "Antigua-et-Barbuda"
+        ai: "Anguilla"
+        al: "Albanie"
+        am: "Arménie"
+        an: "Antilles Néerlandaises"
+        ao: "Angola"
+        aq: "Antarctique"
+        ar: "Argentine"
+        as: "Samoa Américaines"
+        at: "Autriche"
+        au: "Australie"
+        aw: "Aruba"
+        ax: "Åland, Îles"
+        az: "Azerbaïdjan"
+        ba: "Bosnie-Herzégovine"
+        bb: "Barbade"
+        bd: "Bangladesh"
+        be: "Belgique"
+        bf: "Burkina Faso"
+        bg: "Bulgarie"
+        bh: "Bahreïn"
+        bi: "Burundi"
+        bj: "Bénin"
+        bl: "Saint-Barthélemy"
+        bm: "Bermudes"
+        bn: "Brunéi Darussalam"
+        bo: "Bolivie"
+        br: "Brésil"
+        bs: "Bahamas"
+        bt: "Bhoutan"
+        bv: "Bouvet, Île"
+        bw: "Botswana"
+        by: "Bélarus"
+        bz: "Belize"
+        ca: "Canada"
+        cc: "Cocos (Keeling), Îles"
+        cd: "Congo, La République Démocratique Du"
+        cf: "Centrafricaine, République"
+        cg: "Congo"
+        ch: "Suisse"
+        ci: "Côte D’Ivoire"
+        ck: "Cook, Îles"
+        cl: "Chili"
+        cm: "Cameroun"
+        cn: "Chine"
+        co: "Colombie"
+        cr: "Costa Rica"
+        cu: "Cuba"
+        cv: "Cap-Vert"
+        cx: "Christmas, Île"
+        cy: "Chypre"
+        cz: "Tchèque, République"
+        de: "Allemagne"
+        dj: "Djibouti"
+        dk: "Danemark"
+        dm: "Dominique"
+        do: "Dominicaine, République"
+        dz: "Algérie"
+        ec: "Équateur"
+        ee: "Estonie"
+        eg: "Égypte"
+        eh: "Sahara Occidental"
+        er: "Érythrée"
+        es: "Espagne"
+        et: "Éthiopie"
+        fi: "Finlande"
+        fj: "Fidji"
+        fk: "Falkland, Îles (Malvinas)"
+        fm: "Micronésie, États Fédérés De"
+        fo: "Féroé, Îles"
+        fr: "France"
+        ga: "Gabon"
+        gb: "Royaume-Uni"
+        gd: "Grenade"
+        ge: "Géorgie"
+        gf: "Guyane Française"
+        gg: "Guernesey"
+        gh: "Ghana"
+        gi: "Gibraltar"
+        gl: "Groenland"
+        gm: "Gambie"
+        gn: "Guinée"
+        gp: "Guadeloupe"
+        gq: "Guinée Équatoriale"
+        gr: "Grèce"
+        gs: "Géorgie du Sud et les Îles Sandwich du Sud"
+        gt: "Guatemala"
+        gu: "Guam"
+        gw: "Guinée-Bissau"
+        gy: "Guyana"
+        hk: "Hong-Kong"
+        hm: "Heard, Île et Mcdonald, Îles"
+        hn: "Honduras"
+        hr: "Croatie"
+        ht: "Haïti"
+        hu: "Hongrie"
+        id: "Indonésie"
+        ie: "Irlande"
+        il: "Israël"
+        im: "Île De Man"
+        in: "Inde"
+        io: "Océan Indien, Territoire Britannique de L’"
+        iq: "Iraq"
+        ir: "Iran, République Islamique d’"
+        is: "Islande"
+        it: "Italie"
+        je: "Jersey"
+        jm: "Jamaïque"
+        jo: "Jordanie"
+        jp: "Japon"
+        ke: "Kenya"
+        kg: "Kirghizistan"
+        kh: "Cambodge"
+        ki: "Kiribati"
+        km: "Comores"
+        kn: "Saint-Kitts-Et-Nevis"
+        kp: "Corée, République Populaire Démocratique de"
+        kr: "Corée, République De"
+        kw: "Koweït"
+        ky: "Caïmanes, Îles"
+        kz: "Kazakhstan"
+        la: "Lao, République Démocratique Populaire"
+        lb: "Liban"
+        lc: "Sainte-Lucie"
+        li: "Liechtenstein"
+        lk: "Sri Lanka"
+        lr: "Libéria"
+        ls: "Lesotho"
+        lt: "Lituanie"
+        lu: "Luxembourg"
+        lv: "Lettonie"
+        ly: "Libyenne, Jamahiriya Arabe"
+        ma: "Maroc"
+        mc: "Monaco"
+        md: "Moldova, République de"
+        me: "Monténégro"
+        mf: "Saint-Martin"
+        mg: "Madagascar"
+        mh: "Marshall, Îles"
+        mk: "Macédoine, l’Ex-République Yougoslave de"
+        ml: "Mali"
+        mm: "Myanmar"
+        mn: "Mongolie"
+        mo: "Macao"
+        mp: "Mariannes du Nord, Îles"
+        mq: "Martinique"
+        mr: "Mauritanie"
+        ms: "Montserrat"
+        mt: "Malte"
+        mu: "Maurice"
+        mv: "Maldives"
+        mw: "Malawi"
+        mx: "Mexique"
+        my: "Malaisie"
+        mz: "Mozambique"
+        na: "Namibie"
+        nc: "Nouvelle-Calédonie"
+        ne: "Niger"
+        nf: "Norfolk, Île"
+        ng: "Nigéria"
+        ni: "Nicaragua"
+        nl: "Pays-Bas"
+        no: "Norvège"
+        np: "Népal"
+        nr: "Nauru"
+        nu: "Niué"
+        nz: "Nouvelle-Zélande"
+        om: "Oman"
+        pa: "Panama"
+        pe: "Pérou"
+        pf: "Polynésie Française"
+        pg: "Papouasie-Nouvelle-Guinée"
+        ph: "Philippines"
+        pk: "Pakistan"
+        pl: "Pologne"
+        pm: "Saint-Pierre-et-Miquelon"
+        pn: "Pitcairn"
+        pr: "Porto Rico"
+        ps: "Palestinien Occupé, Territoire"
+        pt: "Portugal"
+        pw: "Palaos"
+        py: "Paraguay"
+        qa: "Qatar"
+        re: "Réunion"
+        ro: "Roumanie"
+        rs: "Serbie"
+        ru: "Russie, Fédération de"
+        rw: "Rwanda"
+        sa: "Arabie Saoudite"
+        sb: "Salomon, Îles"
+        sc: "Seychelles"
+        sd: "Soudan"
+        se: "Suède"
+        sg: "Singapour"
+        sh: "Sainte-Hélène"
+        si: "Slovénie"
+        sj: "Svalbard et Île Jan Mayen"
+        sk: "Slovaquie"
+        sl: "Sierra Leone"
+        sm: "Saint-Marin"
+        sn: "Sénégal"
+        so: "Somalie"
+        sr: "Suriname"
+        ss: "Soudan du Sud"
+        st: "Sao Tomé-et-Principe"
+        sv: "El Salvador"
+        sy: "Syrienne, République Arabe"
+        sz: "Swaziland"
+        tc: "Turks et Caïques, Îles"
+        td: "Tchad"
+        tf: "Terres Australes Françaises"
+        tg: "Togo"
+        th: "Thaïlande"
+        tj: "Tadjikistan"
+        tk: "Tokelau"
+        tl: "Timor-Leste"
+        tm: "Turkménistan"
+        tn: "Tunisie"
+        to: "Tonga"
+        tr: "Turquie"
+        tt: "Trinité-Et-Tobago"
+        tv: "Tuvalu"
+        tw: "Taïwan, Province De Chine"
+        tz: "Tanzanie, République-Unie De"
+        ua: "Ukraine"
+        ug: "Ouganda"
+        um: "Îles Mineures Éloignées Des États-Unis"
+        us: "États-Unis"
+        uy: "Uruguay"
+        uz: "Ouzbékistan"
+        va: "Saint-Siège (État De La Cité Du Vatican)"
+        vc: "Saint-Vincent-Et-Les Grenadines"
+        ve: "Venezuela"
+        vg: "Îles Vierges Britanniques"
+        vi: "Îles Vierges Des États-Unis"
+        vn: "Viet Nam"
+        vu: "Vanuatu"
+        wf: "Wallis Et Futuna"
+        ws: "Samoa"
+        ye: "Yémen"
+        yt: "Mayotte"
+        za: "Afrique Du Sud"
+        zm: "Zambie"
+        zw: "Zimbabwe"
+    currencies:
+      items:
+        AED: "Dirham des Émirats"
+        AFN: "Afghani"
+        ALL: "Lek (monnaie)"
+        AMD: "Dram (monnaie)"
+        ANG: "Florin des Antilles néerlandaises"
+        AOA: "Kwanza angolais"
+        ARS: "Peso argentin"
+        AUD: "Dollar australien"
+        AWG: "Florin d’Aruba"
+        AZN: "Nouveau manat azéri"
+        BAM: "Marka (monnaie)"
+        BBD: "Dollar de la Barbade"
+        BDT: "Taka"
+        BGN: "Lev bulgare"
+        BHD: "Dinar bahreïni"
+        BIF: "Franc burundais"
+        BMD: "Dollar des Bermudes"
+        BND: "Dollar de Brunei"
+        BOB: "Boliviano"
+        BOV: "Mvdol"
+        BRL: "Réal brésilien"
+        BSD: "Dollar bahaméen"
+        BTN: "Ngultrum"
+        BWP: "Pula"
+        BYR: "Rouble biélorusse"
+        BZD: "Dollar de Belize"
+        CAD: "Dollar canadien"
+        CDF: "Franc congolais"
+        CHE: "Euro WIR"
+        CHF: "Franc suisse"
+        CHW: "Franc WIR"
+        CLF: "Unidad de formento"
+        CLP: "Peso chilien"
+        CNY: "Yuan renminbi"
+        COP: "Peso colombien"
+        COU: "Unidad de valor real"
+        CRC: "Colon costaricain"
+        CUC: "Peso cubain convertible"
+        CUP: "Peso cubain"
+        CVE: "Escudo cap-verdien"
+        CZK: "Couronne tchèque"
+        DJF: "Franc Djibouti"
+        DKK: "Couronne danoise"
+        DOP: "Peso dominicain"
+        DZD: "Dinar algérien"
+        EGP: "Livre égyptienne"
+        ERN: "Nakfa"
+        ETB: "Birr"
+        EUR: "Euro"
+        FJD: "Dollar fidjien"
+        FKP: "Livre des Îles Malouines"
+        FRF: "Franc français"
+        GBP: "Livre sterling"
+        GEL: "Lari (monnaie)"
+        GHS: "Cedi"
+        GIP: "Livre de Gibraltar"
+        GMD: "Dalasi"
+        GNF: "Franc guinéen"
+        GTQ: "Quetzal guatémaltèque"
+        GYD: "Dollar du Guyana"
+        HKD: "Dollar de Hong-Kong"
+        HNL: "Lempira hondurien"
+        HRK: "Kuna (monnaie)"
+        HTG: "Gourde haïtienne"
+        HUF: "Forint"
+        IDR: "Roupie indonésienne"
+        ILS: "Nouveau shekel"
+        INR: "Roupie indienne"
+        IQD: "Dinar irakien"
+        IRR: "Rial iranien"
+        ISK: "Couronne islandaise"
+        JMD: "Dollar jamaïcain"
+        JOD: "Dinar jordanien"
+        JPY: "Yen"
+        KES: "Shilling kényan"
+        KGS: "Som"
+        KHR: "Riel"
+        KMF: "Franc comorien"
+        KPW: "Won"
+        KRW: "Won"
+        KWD: "Dinar koweïtien"
+        KYD: "Dollar des Îles Caïmans"
+        KZT: "Tenge"
+        LAK: "Kip"
+        LBP: "Livre libanaise"
+        LKR: "Roupie srilankaise"
+        LRD: "Dollar libérien"
+        LSL: "Loti"
+        LTL: "Litas"
+        LVL: "Lats letton"
+        LYD: "Dinar libyen"
+        MAD: "Dirham marocain"
+        MDL: "Leu moldave"
+        MGA: "Ariary"
+        MKD: "Denar"
+        MMK: "Kyat"
+        MNT: "Tugrik"
+        MOP: "Pataca"
+        MRO: "Ouguiya"
+        MUR: "Roupie mauricienne"
+        MVR: "Rufiyaa"
+        MWK: "Kwacha malawite"
+        MXN: "Peso mexicain"
+        MXV: "Unidad de inversión"
+        MYR: "Ringgit"
+        MZN: "Metical"
+        NAD: "Dollar namibien"
+        NGN: "Naira"
+        NIO: "Córdoba nicaraguayen"
+        NOK: "Couronne norvégienne"
+        NPR: "Roupie népalaise"
+        NZD: "Dollar néo-zélandais"
+        OMR: "Rial omanais"
+        PAB: "Balboa panaméen"
+        PEN: "Nuevo sol"
+        PGK: "Kina"
+        PHP: "Peso philippin"
+        PKR: "Roupie pakistanaise"
+        PLN: "Zloty"
+        PYG: "Guarani (monnaie)"
+        QAR: "Rial qatari"
+        RON: "Leu roumain"
+        RSD: "Dinar serbe"
+        RUB: "Rouble russe"
+        RWF: "Franc rwandais"
+        SAR: "Riyal saoudien"
+        SBD: "Dollar des îles Salomon"
+        SCR: "Roupie seychelloise"
+        SDG: "Livre soudanaise"
+        SEK: "Couronne suédoise"
+        SGD: "Dollar singapourien"
+        SHP: "Livre de Sainte-Hélène"
+        SLL: "Leone"
+        SOS: "Shilling somalien"
+        SRD: "Dollar surinamien"
+        SSP: "Livre sud-soudanaise"
+        STD: "Dobra"
+        SVC: "Colon salvadorien"
+        SYP: "Livre syrienne"
+        SZL: "Lilangeni"
+        THB: "Baht"
+        TJS: "Somoni"
+        TMT: "Manat turkmène"
+        TND: "Dinar tunisien"
+        TOP: "Pa’anga"
+        TRY: "Livre turque"
+        TTD: "Dollar de Trinité-et-Tobago"
+        TWD: "Dollar taïwanais"
+        TZS: "Shilling tanzanien"
+        UAH: "Hryvnia"
+        UGX: "Shilling ougandais"
+        USD: "Dollar américain"
+        USN: "Dollar américain"
+        USS: "Dollar américain"
+        UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+        UYU: "Peso uruguayen"
+        UZS: "Sum (monnaie)"
+        VEF: "Bolívar vénézuélien"
+        VND: "Dong (monnaie)"
+        VUV: "Vatu"
+        WST: "Tala"
+        XAF: "Franc CFA BEAC"
+        XCD: "Dollar de la Caraïbe orientale"
+        XOF: "Franc CFA BCEAO"
+        XPF: "Franc CFP"
+        YER: "Rial yéménite"
+        ZAR: "Rand"
+        ZMK: "Kwacha zambien"
+        ZWL: "Dollar zimbabwéen"
     document_categories:
       items:
         health: "Santé - Hygiène"
@@ -352,6 +772,112 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d'utilisation"
       name: "Indicateurs"
+    languages:
+      items:
+        afr: "Afrikaans"
+        amh: "Amharique"
+        arb: "Arabe (standard)"
+        aym: "Aymara"
+        aze: "Azéri"
+        bel: "Biélorusse"
+        ben: "Bengali"
+        bis: "Bichlamar"
+        bul: "Bulgare"
+        cat: "Catalan"
+        ces: "Tchèque"
+        cmn: "Mandarin"
+        crs: "Créole seychellois"
+        dan: "Danois"
+        deu: "Allemand"
+        div: "Maldivien"
+        dzo: "Dzongkha"
+        ell: "Grec (moderne)"
+        eng: "Anglais"
+        est: "Estonien"
+        fas: "Persan"
+        fij: "Fidjien"
+        fil: "Filipino"
+        fin: "Finnois"
+        fra: "Français"
+        gil: "Kiribati"
+        gle: "(gaélique) irlandais"
+        grn: "Guarani"
+        hat: "Haïtien; créole haïtien"
+        heb: "Hébreu"
+        hin: "Hindi"
+        hmo: "Hiri motu"
+        hrv: "Croate"
+        hun: "Hongrois"
+        hye: "Arménien"
+        iba: "Iban"
+        ind: "Indonésien"
+        isl: "Islandais"
+        ita: "Italien"
+        jpn: "Japonais"
+        kat: "Géorgien"
+        kaz: "Kazakh"
+        khm: "Khmer"
+        kir: "Kirghize"
+        kor: "Coréen"
+        lao: "Lao"
+        lat: "Latin"
+        lav: "Letton"
+        lit: "Lituanien"
+        ltz: "Luxembourgeois"
+        mah: "Marshall"
+        mkd: "Macédonien"
+        mlg: "Malgache"
+        mlt: "Maltais"
+        mon: "Mongol"
+        mri: "Maori"
+        msa: "Malais"
+        mya: "Birman"
+        nau: "Nauruan"
+        nde: "Ndébélé du Nord"
+        nep: "Népalais"
+        nld: "Néerlandais"
+        nor: "Norvégien"
+        nya: "Nyanja"
+        nzs: "Langue des signes néo-zélandaise"
+        pau: "Palau"
+        pol: "Polonais"
+        por: "Portugais"
+        pov: "Créole de Guinée-Bissau"
+        pus: "Pachto"
+        que: "Quechua"
+        rar: "Rarotonga"
+        ron: "Roumain"
+        run: "Rundi"
+        rus: "Russe"
+        sag: "Sango"
+        sin: "Singhalais"
+        slk: "Slovaque"
+        slv: "Slovène"
+        smo: "Samoan"
+        sna: "Shona"
+        som: "Somali"
+        sot: "Sotho du Sud"
+        spa: "Espagnol"
+        sqi: "Albanais"
+        srp: "Serbe"
+        swa: "Swahili"
+        swb: "Comorien"
+        swe: "Suédois"
+        tam: "Tamoul"
+        tet: "Tetum"
+        tgk: "Tadjik"
+        tha: "Thaï(landais)"
+        tir: "Tigrigna"
+        ton: "Tongan (Îles Tonga)"
+        tpi: "Tok pisin"
+        tuk: "Turkmène"
+        tur: "Turc"
+        tvl: "Tuvalu"
+        tzm: "Tamazight"
+        ukr: "Ukrainien"
+        urd: "Ourdou"
+        uzb: "Ou(s)zbek"
+        vie: "Vietnamien"
     procedure_natures:
       items:
         animal_cares: "Soin animaliers"
