--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -263,6 +263,432 @@ spa:
         # young_animal_expenses: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_revenues: "Animaux reproducteurs (jeunes de renouvellement)"
       # name: "Code comptable"
+    countries:
+      items:
+        ad: "Andorra"
+        ae: "Emiratos Árabes Unidos"
+        af: "Afganistán"
+        ag: "Antigua y Barbuda"
+        ai: "Anguila"
+        al: "Albania"
+        am: "Armenia"
+        an: "Antillas Neerlandesas"
+        ao: "Angola"
+        aq: "Antártida"
+        ar: "Argentina"
+        as: "Samoa Americana"
+        at: "Austria"
+        au: "Australia"
+        aw: "Aruba"
+        ax: "Åland"
+        az: "Azerbaiyán"
+        ba: "Bosnia y Herzegovina"
+        bb: "Barbados"
+        bd: "Bangladesh"
+        be: "Bélgica"
+        bf: "Burkina Faso"
+        bg: "Bulgaria"
+        bh: "Bahréin"
+        bi: "Burundi"
+        bj: "Benín"
+        bl: "San Bartolomé"
+        bm: "Bermudas"
+        bn: "Brunéi"
+        bo: "Bolivia"
+        br: "Brasil"
+        bs: "Bahamas"
+        bt: "Bután"
+        bv: "Isla Bouvet"
+        bw: "Botsuana"
+        by: "Bielorrusia"
+        bz: "Belice"
+        ca: "Canadá"
+        cc: "Islas Cocos"
+        cd: "República Democrática del Congo"
+        cf: "República Centroafricana"
+        cg: "República del Congo"
+        ch: "Suiza"
+        ci: "Costa de Marfil"
+        ck: "Islas Cook"
+        cl: "Chile"
+        cm: "Camerún"
+        cn: "China"
+        co: "Colombia"
+        cr: "Costa Rica"
+        cu: "Cuba"
+        cv: "Cabo Verde"
+        cx: "Isla de Navidad"
+        cy: "Chipre"
+        cz: "República Checa"
+        de: "Alemania"
+        dj: "Yibuti"
+        dk: "Dinamarca"
+        dm: "Dominica"
+        do: "República Dominicana"
+        dz: "Argelia"
+        ec: "Ecuador"
+        ee: "Estonia"
+        eg: "Egipto"
+        eh: "República Árabe Saharaui Democrática"
+        er: "Eritrea"
+        es: "España"
+        et: "Etiopía"
+        fi: "Finlandia"
+        fj: "Fiyi"
+        fk: "Islas Malvinas"
+        fm: "Micronesia"
+        fo: "Islas Feroe"
+        fr: "Francia"
+        ga: "Gabón"
+        gb: "Reino Unido"
+        gd: "Granada"
+        ge: "Georgia"
+        gf: "Guayana Francesa"
+        gg: "Guernsey"
+        gh: "Ghana"
+        gi: "Gibraltar"
+        gl: "Groenlandia"
+        gm: "Gambia"
+        gn: "Guinea"
+        gp: "Guadalupe"
+        gq: "Guinea Ecuatorial"
+        gr: "Grecia"
+        gs: "Islas Georgias del Sur y Sandwich del Sur"
+        gt: "Guatemala"
+        gu: "Guam"
+        gw: "Guinea-Bissau"
+        gy: "Guyana"
+        hk: "Hong Kong"
+        hm: "Islas Heard y McDonald"
+        hn: "Honduras"
+        hr: "Croacia"
+        ht: "Haití"
+        hu: "Hungría"
+        id: "Indonesia"
+        ie: "Irlanda"
+        il: "Israel"
+        im: "Isla de Man"
+        in: "India"
+        io: "Territorio Británico del Océano Índico"
+        iq: "Iraq"
+        ir: "Irán"
+        is: "Islandia"
+        it: "Italia"
+        je: "Jersey"
+        jm: "Jamaica"
+        jo: "Jordania"
+        jp: "Japón"
+        ke: "Kenia"
+        kg: "Kirguistán"
+        kh: "Camboya"
+        ki: "Kiribati"
+        km: "Comoras"
+        kn: "San Cristóbal y Nieves"
+        kp: "Corea del Norte"
+        kr: "Corea del Sur"
+        kw: "Kuwait"
+        ky: "Islas Caimán"
+        kz: "Kazajistán"
+        la: "Laos"
+        lb: "Líbano"
+        lc: "Santa Lucía"
+        li: "Liechtenstein"
+        lk: "Sri Lanka"
+        lr: "Liberia"
+        ls: "Lesoto"
+        lt: "Lituania"
+        lu: "Luxemburgo"
+        lv: "Letonia"
+        ly: "Libia"
+        ma: "Marruecos"
+        mc: "Mónaco"
+        md: "Moldavia"
+        me: "Montenegro"
+        mf: "Saint-Martin"
+        mg: "Madagascar"
+        mh: "Islas Marshall"
+        mk: "República de Macedonia"
+        ml: "Malí"
+        mm: "Birmania"
+        mn: "Mongolia"
+        mo: "Macao"
+        mp: "Islas Marianas del Norte"
+        mq: "Martinica"
+        mr: "Mauritania"
+        ms: "Montserrat"
+        mt: "Malta"
+        mu: "Mauricio"
+        mv: "Maldivas"
+        mw: "Malaui"
+        mx: "México"
+        my: "Malasia"
+        mz: "Mozambique"
+        na: "Namibia"
+        nc: "Nueva Caledonia"
+        ne: "Níger"
+        nf: "Norfolk"
+        ng: "Nigeria"
+        ni: "Nicaragua"
+        nl: "Países Bajos"
+        no: "Noruega"
+        np: "Nepal"
+        nr: "Nauru"
+        nu: "Niue"
+        nz: "Nueva Zelanda"
+        om: "Omán"
+        pa: "Panamá"
+        pe: "Perú"
+        pf: "Polinesia Francesa"
+        pg: "Papúa Nueva Guinea"
+        ph: "Filipinas"
+        pk: "Pakistán"
+        pl: "Polonia"
+        pm: "San Pedro y Miquelón"
+        pn: "Islas Pitcairn"
+        pr: "Puerto Rico"
+        ps: "Territorios palestinos"
+        pt: "Portugal"
+        pw: "Palaos"
+        py: "Paraguay"
+        qa: "Qatar"
+        re: "Reunión"
+        ro: "Rumania"
+        rs: "Serbia"
+        ru: "Rusia"
+        rw: "Ruanda"
+        sa: "Arabia Saudita"
+        sb: "Islas Salomón"
+        sc: "Seychelles"
+        sd: "Sudán"
+        se: "Suecia"
+        sg: "Singapur"
+        sh: "Santa Helena"
+        si: "Eslovenia"
+        sj: "Svalbard y Jan Mayen"
+        sk: "Eslovaquia"
+        sl: "Sierra Leona"
+        sm: "San Marino"
+        sn: "Senegal"
+        so: "Somalia"
+        sr: "Surinam"
+        # ss: "Soudan du Sud"
+        st: "Santo Tomé y Príncipe"
+        sv: "El Salvador"
+        sy: "Siria"
+        sz: "Suazilandia"
+        tc: "Islas Turcas y Caicos"
+        td: "Chad"
+        tf: "Territorios Australes Franceses"
+        tg: "Togo"
+        th: "Tailandia"
+        tj: "Tayikistán"
+        tk: "Tokelau"
+        tl: "Timor Oriental"
+        tm: "Turkmenistán"
+        tn: "Túnez"
+        to: "Tonga"
+        tr: "Turquía"
+        tt: "Trinidad y Tobago"
+        tv: "Tuvalu"
+        tw: "Taiwán"
+        tz: "Tanzania"
+        ua: "Ucrania"
+        ug: "Uganda"
+        um: "Islas ultramarinas de Estados Unidos"
+        us: "Estados Unidos"
+        uy: "Uruguay"
+        uz: "Uzbekistán"
+        va: "Ciudad del Vaticano"
+        vc: "San Vicente y las Granadinas"
+        ve: "Venezuela"
+        vg: "Islas Vírgenes Británicas"
+        vi: "Islas Vírgenes Estadounidenses"
+        vn: "Vietnam"
+        vu: "Vanuatu"
+        wf: "Wallis y Futuna"
+        ws: "Samoa"
+        ye: "Yemen"
+        yt: "Mayotte"
+        za: "Sudáfrica"
+        zm: "Zambia"
+        zw: "Zimbabue"
+    currencies:
+      items:
+        AED: "Dirham de los Emiratos Árabes Unidos"
+        AFN: "Afgani afgano"
+        ALL: "Lek albanés"
+        AMD: "Dram armenio"
+        ANG: "Florín antillano neerlandés"
+        AOA: "Kwanza angoleño"
+        ARS: "Peso argentino"
+        AUD: "Dólar australiano"
+        AWG: "Florín arubeño"
+        AZM: "Manat azerbaiyano" #?
+        AZN: "Manat azerbaiyano"
+        BAM: "Marco convertible de Bosnia-Herzegovina"
+        BBD: "Dólar de Barbados"
+        BDT: "Taka de Bangladesh"
+        BGN: "Lev búlgaro"
+        BHD: "Dinar bahreiní"
+        BIF: "Franco burundés burundés"
+        BMD: "Dòlar de Bermuda"
+        BND: "Dòlar de Brunéi"
+        BOB: "Boliviano"
+        BOV: "Mvdol boliviano (código de fondos)"
+        BRL: "Real brasileño"
+        BSD: "Dólar bahameño"
+        BTN: "Ngultrum de Bután"
+        BWP: "Pula de Botsuana"
+        BYR: "Rublo bielorruso"
+        BZD: "Dólar de Belice"
+        CAD: "Dólar canadiense"
+        CDF: "Franco congoleño"
+        CHE: "Euro WIR"
+        CHF: "Franco suizo"
+        CHW: "Franco WIR"
+        CLF: "Unidades de fomento chilenas (código de fondos)"
+        CLP: "Peso chileno"
+        CNY: "Yuan Renminbi de China"
+        COP: "Peso colombiano"
+        COU: "Unidad de valor real colombiana (añadida al COP)"
+        CRC: "Colón costarricense"
+        CSD: "Dinar serbio (Reemplazado por RSD el 25 de octubre de 2006)" #?
+        CUC: "Peso cubano convertible"
+        CUP: "Peso cubano"
+        CVE: "Escudo caboverdiano"
+        CYP: "Libra chipriota" #?
+        CZK: "Koruna checa"
+        DJF: "Franco yibutiano"
+        DKK: "Corona danesa"
+        DOP: "Peso dominicano"
+        DZD: "Dinar algerino"
+        EEK: "Corona estonia" #?
+        EGP: "Libra egipcia"
+        ERN: "Nakfa eritreo"
+        ETB: "Birr etíope"
+        EUR: "Euro"
+        FJD: "Dólar fijiano"
+        FKP: "Libra malvinense"
+        FRF: "Franco francés"
+        GBP: "Libra esterlina (libra de Gran Bretaña)"
+        GEL: "Lari georgiano"
+        GHS: "Cedi ghanés"
+        GIP: "Libra de Gibraltar"
+        GMD: "Dalasi gambiano"
+        GNF: "Franco guineano"
+        GTQ: "Quetzal guatemalteco"
+        GYD: "Dólar guyanés"
+        HKD: "Dólar de Hong Kong"
+        HNL: "Lempira hondureño"
+        HRK: "Kuna croata"
+        HTG: "Gourde haitiano"
+        HUF: "Forint húngaro"
+        IDR: "Rupiah indonesia"
+        ILS: "Nuevo shéquel israelí"
+        INR: "Rupia india"
+        IQD: "Dinar iraquí"
+        IRR: "Rial iraní"
+        ISK: "Króna islandesa"
+        JMD: "Dólar jamaicano"
+        JOD: "Dinar jordano"
+        JPY: "Yen"
+        KES: "Chelín keniata"
+        KGS: "Som kirguís (de Kirguistán)"
+        KHR: "Riel camboyano"
+        KMF: "Franco comoriano (de Comoras)"
+        KPW: "Won norcoreano"
+        KRW: "Won surcoreano"
+        KWD: "Dinar kuwaití"
+        KYD: "Dólar caimano (de Islas Caimán)"
+        KZT: "Tenge kazajo"
+        LAK: "Kip lao"
+        LBP: "Libra libanesa"
+        LKR: "Rupia de Sri Lanka"
+        LRD: "Dólar liberiano"
+        LSL: "Loti lesotense"
+        LTL: "Litas lituano"
+        LVL: "Lat letón"
+        LYD: "Dinar libio"
+        MAD: "Dirham marroquí"
+        MDL: "Leu moldavo"
+        MGA: "Ariary malgache"
+        MKD: "Denar macedonio"
+        MMK: "Kyat birmano"
+        MNT: "Tughrik mongol"
+        MOP: "Pataca de Macao"
+        MRO: "Ouguiya mauritana"
+        MTL: "Lira maltesa" #?
+        MUR: "Rupia mauricia"
+        MVR: "Rufiyaa maldiva"
+        MWK: "Kwacha malauí"
+        MXN: "Peso mexicano"
+        MXV: "Unidad de Inversión (UDI) mexicana (código de fondos)"
+        MYR: "Ringgit malayo"
+        MZN: "Metical mozambiqueño"
+        NAD: "Dólar namibio"
+        NGN: "Naira nigeriana"
+        NIO: "Córdoba nicaragüense"
+        NOK: "Corona noruega"
+        NPR: "Rupia nepalesa"
+        NZD: "Dólar neozelandés"
+        OMR: "Rial omaní"
+        PAB: "Balboa panameña"
+        PEN: "Nuevo sol peruano"
+        PGK: "Kina de Papúa Nueva Guinea"
+        PHP: "Peso filipino"
+        PKR: "Rupia pakistaní"
+        PLN: "zloty polaco"
+        PYG: "Guaraní paraguayo"
+        QAR: "Rial qatarí"
+        RON: "Leu rumano"
+        # RSD: "Dinar serbe"
+        RUB: "Rublo ruso"
+        RWF: "Franco ruandés"
+        SAR: "Riyal saudí"
+        SBD: "Dólar de las Islas Salomón"
+        SCR: "Rupia de Seychelles"
+        SDG: "Dinar sudanés"
+        SEK: "Corona sueca"
+        SGD: "Dólar de Singapur"
+        SHP: "Libra de Santa Helena"
+        SKK: "Corona eslovaca" #?
+        SLL: "Leone de Sierra Leona"
+        SOS: "Chelín somalí"
+        SRD: "Dólar surinamés"
+        # SSP: "Livre sud-soudanaise"
+        STD: "Dobra de Santo Tomé y Príncipe"
+        # SVC: "Colon salvadorien"
+        SYP: "Libra siria"
+        SZL: "Lilangeni suazi"
+        THB: "Baht tailandés"
+        TJS: "Somoni tayik (de Tayikistán)"
+        TMT: "Manat turcomano"
+        TND: "Dinar tunecino"
+        TOP: "Pa'anga tongano"
+        TRY: "Lira turca"
+        TTD: "Dólar de Trinidad y Tobago"
+        TWD: "Dólar taiwanés"
+        TZS: "Chelín tanzano"
+        UAH: "Grivna ucraniana"
+        UGX: "Chelín ugandés"
+        USD: "Dólar estadounidense"
+        USN: "Dólar estadounidense (Siguiente día) (código de fondos)"
+        USS: "Dólar estadounidense (Mismo día) (código de fondos)"
+        # UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+        UYU: "Peso uruguayo"
+        UZS: "Som uzbeko"
+        VEF: "Bolívar fuerte venezolano"
+        VND: "Dong vietnamita"
+        VUV: "Vatu vanuatense"
+        WST: "Tala samoana"
+        # XAF: "Franc CFA BEAC"
+        # XCD: "Dollar de la Caraïbe orientale"
+        # XOF: "Franc CFA BCEAO"
+        # XPF: "Franc CFP"
+        YER: "Rial yemení (de Yemen)"
+        ZAR: "Rand sudafricano"
+        ZMK: "Kwacha zambiano"
+        ZWL: "Dólar zimbabuense"
     document_categories:
       items:
         # health: "Santé - Hygiène"
@@ -352,6 +778,112 @@ spa:
         # urea_concentration: "Teneur moyenne en urée"
         # usage_duration: "Durée d'utilisation"
       # name: "Indicateurs"
+    languages:
+      items:
+        afr: "Afrikaans"
+        amh: "Amárico"
+        arb: "Árabe (clásico)"
+        aym: "Aimara"
+        aze: "Azerbayano"
+        bel: "Bielorruso"
+        ben: "Bengalí"
+        bis: "Bislama"
+        bul: "Búlgaro"
+        cat: "Catalán"
+        ces: "Checo"
+        cmn: "Chino mandarín"
+        crs: "Criollo seychelense"
+        dan: "Danés"
+        deu: "Alemán"
+        div: "Maldivo"
+        dzo: "Dzongkha"
+        ell: "Griego (moderno)"
+        eng: "Inglés"
+        est: "Estonio"
+        fas: "Persa"
+        fij: "Fi(d)jiano"
+        fil: "Filipino"
+        fin: "Fin(land)és"
+        fra: "Francés"
+        gil: "Gilbertés"
+        gle: "Irlandés"
+        grn: "Guaraní"
+        hat: "Criollo haitiano"
+        heb: "Hebreo"
+        hin: "Hindi"
+        hmo: "Hiri Motu"
+        hrv: "Croata"
+        hun: "Húngaro"
+        hye: "Armenio"
+        iba: "Iban"
+        ind: "Indonesio"
+        isl: "Islandés"
+        ita: "Italiano"
+        jpn: "Japonés"
+        kat: "Georgiano"
+        kaz: "Kazaj(i)o"
+        khm: "Jemer"
+        kir: "Kirguís"
+        kor: "Coreano"
+        lao: "Laosiano"
+        lat: "Latín"
+        lav: "Letón"
+        lit: "Lituano"
+        ltz: "Luxemburgués"
+        mah: "Marshalés"
+        mkd: "Macedonio"
+        mlg: "Mal(a)gache"
+        mlt: "Maltés"
+        mon: "Mongol"
+        mri: "Maorí"
+        msa: "Malayo"
+        mya: "Birmano"
+        nau: "Nauruano"
+        nde: "Ndebele del norte"
+        nep: "Nepalí"
+        nld: "Neerlandés"
+        nor: "Noruego"
+        nya: "Ñanya"
+        nzs: "Lengua de signos de Nueva Zelanda"
+        pau: "Palauano"
+        pol: "Polaco"
+        por: "Portugués"
+        pov: "Criollo de Guinea-Bissau"
+        pus: "Pastú"
+        que: "Quechua"
+        rar: "Maorí de Islas Cook"
+        ron: "Rumano"
+        run: "Rundí"
+        rus: "Ruso"
+        sag: "Sango"
+        sin: "Cingalés"
+        slk: "Eslovaco"
+        slv: "Esloveno"
+        smo: "Samoano"
+        sna: "Sonés"
+        som: "Somalí"
+        sot: "Sesotho"
+        spa: "Español"
+        sqi: "Albanés"
+        srp: "Serbio"
+        swa: "Suahelí"
+        swb: "Comorense"
+        swe: "Sueco"
+        tam: "Tamil"
+        tet: "Tetun"
+        tgk: "Tayiko"
+        tha: "Tailandés"
+        tir: "Tigriña"
+        ton: "Tongano"
+        tpi: "Tok Pisin"
+        tuk: "Turcomano"
+        tur: "Turco"
+        tvl: "Tuvaluano"
+        tzm: "Bereber"
+        ukr: "Ucrani(an)o"
+        urd: "Urdu"
+        uzb: "Uzbeco"
+        vie: "Vietnamita"
     procedure_natures:
       items:
         # animal_cares: "Soin animaliers"
