--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -244,6 +244,7 @@ jpn:
       # index: "Encaissements"
       # new: "Ajout d’un nouvel encaissement"
       # show: "Encaissement n°%{number} de %{entity}"
+    backend/interventions: #?
     backend/inventories:
       # edit: "Modifier l’inventaire"
       # index: "Inventaires"
@@ -315,15 +316,8 @@ jpn:
       # index: "Médicaments"
       # new: "Nouveau médicaments"
       # show: "Médicament\_: %{name}"
-    backend/meeting_natures:
-      # edit: "Modifier le type d'évènement\_: %{name}"
-      # index: "Types d'évènement"
-      # new: "Créer un type d'évènement"
-      # show: "Type d'évènement\_: %{name}"
-    backend/meetings:
-      # edit: "Modifier un évènement"
-      # index: "Évènements"
-      # new: "Nouvel évènement"
+    backend/meeting_natures: #?
+    backend/meetings: #?
     backend/mineral_matters:
       # edit: "Modifier la matière minérale\_: %{name}"
       # index: "Matières minérales"
@@ -395,12 +389,7 @@ jpn:
       # show: "Prescription\_: %{reference_number}"
     backend/prices: #?
     backend/procedure_natures: #?
-    backend/procedures:
-      # edit: "Modifier la procédure\_: %{nomen}"
-      # index: "Procédures"
-      # new: "Nouvelle procédure"
-      # play: "Effectuer la procédure\_: %{name}"
-      # show: "Procédure\_: %{name}"
+    backend/procedures: #?
     backend/product_abilities: #?
     backend/product_groups:
       # edit: "Modifier le groupe\_: %{name} "
@@ -1784,7 +1773,7 @@ jpn:
     # backend/animals: "{name} - {work_number}"
     # backend/campaigns: "{name}"
     # backend/entity_links: "{started_at}"
-    # backend/events: "{reason}"
+    # backend/events: "{name}"
     # backend/journal_entry_items: "{name}"
     # backend/logs: "{observed_at}"
     # backend/matters: "{name} - {work_number}"
