--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -214,6 +214,16 @@ fra:
       edit: "Modifier l’établissement\_: %{name}"
       index: "Établissements"
       new: "Ajout d’un nouvel etablissement"
+    backend/event_natures:
+      # edit: "Edit backend/event nature"
+      # index: "Index backend/event nature"
+      # new: "New backend/event nature"
+    backend/events:
+      # autocomplete_for_place: "Autocomplete for place backend/event"
+      # change_minutes: "Change minutes backend/event"
+      # edit: "Edit backend/event"
+      # index: "Index backend/event"
+      # new: "New backend/event"
     backend/financial_years:
       close: "Clôturer l’exercice %{code}"
       compute_balances: "Calculer la balance de l’exercice"
@@ -255,6 +265,9 @@ fra:
       index: "Encaissements"
       new: "Ajout d’un nouvel encaissement"
       show: "Encaissement n°%{number} de %{entity}"
+    backend/interventions:
+      # edit: "Edit backend/intervention"
+      # new: "New backend/intervention"
     backend/inventories:
       edit: "Modifier l’inventaire"
       index: "Inventaires"
@@ -332,17 +345,6 @@ fra:
       index: "Médicaments"
       new: "Nouveau médicaments"
       show: "Médicament\_: %{name}"
-    backend/meeting_natures:
-      edit: "Modifier le type d'évènement\_: %{name}"
-      index: "Types d'évènement"
-      new: "Créer un type d'évènement"
-      show: "Type d'évènement\_: %{name}" #?
-    backend/meetings:
-      # autocomplete_for_place: "Autocomplete for place backend/meeting"
-      # change_minutes: "Change minutes backend/meeting"
-      edit: "Modifier un évènement"
-      index: "Évènements"
-      new: "Nouvel évènement"
     backend/mineral_matters:
       edit: "Modifier la matière minérale\_: %{name}"
       index: "Matières minérales"
@@ -415,13 +417,6 @@ fra:
       index: "Prescriptions"
       new: "Nouvelle prescription"
       show: "Prescription\_: %{reference_number}"
-    backend/procedures:
-      edit: "Modifier la procédure\_: %{nomen}"
-      index: "Procédures"
-      # jump: "Jump backend/procedure"
-      new: "Nouvelle procédure"
-      play: "Effectuer la procédure\_: %{name}"
-      show: "Procédure\_: %{name}"
     backend/product_groups:
       edit: "Modifier le groupe\_: %{name} "
       index: "Groupes de produits"
@@ -676,6 +671,8 @@ fra:
     backend/entity_links: "Liens entre personnes"
     backend/equipments: "Équipements"
     backend/establishments: "Établissements"
+    # backend/event_natures: "Backend/event natures"
+    # backend/events: "Backend/events"
     backend/financial_years: "Exercices comptables"
     # backend/gaps: "Backend/gaps"
     # backend/helps: "Backend/helps"
@@ -686,6 +683,7 @@ fra:
     backend/incoming_payment_modes: "Modes d’encaissement"
     backend/incoming_payments: "Encaissements"
     backend/interfacers: "Interfaceurs"
+    # backend/interventions: "Backend/interventions"
     backend/inventories: "Inventaires"
     backend/inventory_items: "Lignes d’inventaires"
     backend/journal_entries: "Écritures comptables"
@@ -702,8 +700,6 @@ fra:
     backend/mandates: "Responsabilités"
     backend/matters: "Matières"
     # backend/medicines: "Backend/medicines"
-    # backend/meeting_natures: "Backend/meeting natures"
-    # backend/meetings: "Backend/meetings"
     # backend/mineral_matters: "Backend/mineral matters"
     backend/myselves: "Mon compte"
     backend/observations: "Observations"
@@ -720,7 +716,6 @@ fra:
     # backend/plants: "Backend/plants"
     backend/preferences: "Préférences"
     # backend/prescriptions: "Backend/prescriptions"
-    # backend/procedures: "Backend/procedures"
     backend/product_groups: "Lot de produits"
     # backend/product_indicator_data: "Backend/product indicator data"
     # backend/product_links: "Backend/product links"
@@ -1887,7 +1882,7 @@ fra:
     backend/animals: "{name} - {work_number}"
     backend/campaigns: "{name}"
     backend/entity_links: "{started_at}"
-    backend/events: "{reason}"
+    backend/events: "{name}"
     backend/journal_entry_items: "{name}"
     backend/logs: "{observed_at}"
     backend/matters: "{name} - {work_number}"
