--- a/config/locales/fra/help/animal_groups-index.txt
+++ b/config/locales/fra/help/animal_groups-index.txt
@@ -4,7 +4,7 @@
 
 Ici, vous pouvez [[>backend/animal_groups#new|créer]] , modifier et visualiser vos groupes d'animaux.
 
->>> Pour enregistrer un évènement lié à un groupe d'animaux (alimentation, pesée, traitement, achat, vente,...), il faut [[>backend/procedures#new|créer]]
->>> {{icon:plus}} une nouvelle procédure
+>>> Pour enregistrer un évènement lié à un groupe d'animaux (alimentation, pesée, traitement, achat, vente,...), il faut [[>backend/interventions#new|créer]]
+>>> {{icon:plus}} une nouvelle intervention
 
-!!! Tant qu'un groupe d'animaux n'intervient dans aucuns indicateurs , procédures, achats, ventes,...il peut être supprimé.
+!!! Tant qu'un groupe d'animaux n'intervient dans aucuns indicateurs , interventions, achats, ventes,...il peut être supprimé.
