--- a/config/locales/fra/help/animals-index.txt
+++ b/config/locales/fra/help/animals-index.txt
@@ -4,7 +4,7 @@
 
 Ici, vous pouvez [[>backend/animals#new|créer]] , modifier et visualiser vos animaux.
 
->>> Pour enregistrer un évènement lié à un animal (naissance, pesée, traitement, achat, vente, décès,...), il faut [[>backend/procedures#new|créer]]
->>> {{icon:plus}} une nouvelle procédure
+>>> Pour enregistrer un évènement lié à un animal (naissance, pesée, traitement, achat, vente, décès,...), il faut [[>backend/interventions#new|créer]]
+>>> {{icon:plus}} une nouvelle intervention
 
-!!! Tant qu'un animal n'intervient dans aucuns indicateurs , procédures, achats, ventes,...il peut être supprimé.
+!!! Tant qu'un animal n'intervient dans aucuns indicateurs , interventions, achats, ventes,...il peut être supprimé.
