--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -37,6 +37,7 @@ fra:
     manage_entity_links: "Gérer les liens entre fiches"
     manage_equipments: "Gérer le matériel"
     manage_estimates: "Créer, modifier des devis"
+    # manage_events: "Manage events"
     manage_financial_years: "Gérer, clôturer les exercices"
     manage_incoming_delivery_modes: "Gérer les modes de livraisons entrantes"
     manage_incoming_payment_modes: "Gérer les modes d’encaissement"
@@ -47,7 +48,6 @@ fra:
     manage_land_parcels: "Gérer les îlots"
     manage_listings: "Gérer les extractions"
     manage_mandates: "Gérer les responsabilités"
-    manage_meetings: "Gérer les évènements"
     manage_observations: "Gérer les observations"
     manage_operations: "Gérer les travaux"
     manage_outgoing_delivery_modes: "Gérer les types de livraison"
